# kabukit

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  README.md  async_progress_bar.py  gemini.md  index.html  issue_proposal.md  mkdocs.yml  pr_comment_proposal.md  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yaml  code-quality-tests.yaml  docs.yaml  publish.yaml
api/kabukit/: index.html
api/kabukit/analysis/: index.html
api/kabukit/cli/: index.html
api/kabukit/core/: index.html
api/kabukit/domain/: index.html
api/kabukit/edinet/: index.html
api/kabukit/jquants/: index.html
api/kabukit/sources/: index.html
api/kabukit/utils/: index.html
assets/css/: kabukit.css
concept/: index.html
concept/core_indicators/: index.html
data_layer/: index.html
data_layer/adjusted_shares/: index.html
data_layer/indicator_calculation/: index.html
data_layer/jquants_schema/: index.html
data_layer/practical_notes/: index.html
docs/: analysis_workflow.md  cli_reference.md  daily_adjusted_shares.md  edinet_date_logic.md  financial_statements_schema.md  index.md  indicator_calculation_policy.md  market_overview_analysis.md  report_analysis_deep_dive.md  timeseries_shares_adjustment.md  timeseries_shares_adjustment_alternative.md
docs/assets/css/: kabukit.css
docs/concept/: core_indicators.md  index.md
docs/css/: kabukit.css
docs/data_layer/: adjusted_shares.md  index.md  indicator_calculation.md  jquants_schema.md  practical_notes.md
docs/guides/: cache.md  cli.md  dataframe.md  date.md  edinet.md  jquants.md  tdnet.md
docs/guides/api/: edinet.md  index.md  jquants.md  tdnet.md
docs/workflow/: 01_market_overview.md  index.md
guides/api/: index.html
guides/api/edinet/: index.html
guides/api/jquants/: index.html
guides/api/tdnet/: index.html
guides/cache/: index.html
guides/cli/: index.html
guides/dataframe/: index.html
guides/date/: index.html
guides/edinet/: index.html
guides/jquants/: index.html
guides/tdnet/: index.html
notebooks/: price.py
notebooks/01_api_exploration/: 00_explore_all_apis.py  01_jquants.py  01_jquants_info.py  02_jquants_prices.py  03_jquants_statements.py
notebooks/01_データ取得/: 10_J-Quants_認証.py  11_J-Quants_上場銘柄一覧.py  12_J-Quants_財務情報.py  13_J-Quants_株価四本値.py  20_EDINET_書類一覧.py  21_EDINET_報告書.py  21_EDINET_書類.py  30_JPX_株式数.py
notebooks/02_market_overview/: 01_market_cap_distribution.py
notebooks/02_データ検証/: 00_決算期.py  01_TTM.py  10_J-Quants_財務情報.py  10_株価指標.py  10_株式数.py  20_予想純利益.py  20_時価総額.py  20_株価指標.py  30_予想配当.py  30_純資産.py  40_予想純利益.py  50_予想配当.py
notebooks/02_データ確認/: 10_J-Quants_財務情報.py  99_Book1_P014.py
notebooks/03_分析/: 01_株数乖離調査.py
notebooks/03_市場分析/: 10_TOPIX推移.py  20_全銘柄時価総額_推移.py  30_全銘柄時価総額_分布.py  40_利回り.py
scripts/: generate_index.py  progress.py
search/: search_index.json
src/kabukit/: __init__.py  cache.py  cli.py  concurrent.py  config.py  index.html
src/kabukit/analysis/: index.html
src/kabukit/app/: config.py  main.py
src/kabukit/cli/: app.py  auth.py  cache.py  get.py  index.html  utils.py
src/kabukit/core/: base.py  cache.py  index.html  prices.py  statements.py
src/kabukit/domain/: base.py  cache.py  index.html
src/kabukit/edinet/: __init__.py  client.py  concurrent.py  doc.py  index.html  xbrl.py
src/kabukit/jquants/: __init__.py  client.py  (+5 more)
tests/: test_concurrent.py
tests/cli/: test_app.py  test_auth.py  test_get.py
tests/core/: test_base.py  test_prices.py  test_statements.py
tests/edinet/: conftest.py  test_client.py  test_concurrent.py  test_doc.py  test_xbrl.py
tests/jquants/: conftest.py  test_client.py  test_client_auth.py  test_concurrent.py  test_info.py  test_prices.py  test_schema.py  test_statements.py
tests/unit/: conftest.py
tests/utils/: test_concurrent.py  test_params.py
tests/validation/: conftest.py
workflow/: index.html
workflow/01_market_overview/: index.html
(+515 files in other folders)
